# momo-result

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml
apps/ocr-worker/: README.md  pyproject.toml
apps/ocr-worker/docs/: api-contract.md
apps/ocr-worker/scripts/: README.md  eval_accuracy.py
apps/ocr-worker/scripts/eval_lib/: __init__.py  __main__.py  cli.py  comparator.py  matcher.py  report.py  runner.py  types.py
apps/ocr-worker/src/momo_ocr/: __init__.py  main.py
apps/ocr-worker/src/momo_ocr/app/: __init__.py  cli.py  composition.py  config.py  logging.py  worker_process.py
apps/ocr-worker/src/momo_ocr/features/image_processing/: __init__.py  colors.py  geometry.py  preprocessing.py  roi.py
apps/ocr-worker/src/momo_ocr/features/incident_log/: __init__.py  attempts.py  cell_recognition.py  models.py  parser.py  postprocess.py  profile.py  voting.py
apps/ocr-worker/src/momo_ocr/features/ocr_analysis/: __init__.py  analyze_image.py
apps/ocr-worker/src/momo_ocr/features/ocr_domain/: __init__.py  models.py  money.py
apps/ocr-worker/src/momo_ocr/features/ocr_jobs/: __init__.py  aliases.py  cancellation.py  consumer.py  debug_dir.py  delivery_handler.py  dependencies.py  failure_recorder.py  lifecycle.py  models.py  pipeline.py  queue_contract.py  redis_consumer.py  repository.py  result_writer.py  runner.py
apps/ocr-worker/src/momo_ocr/features/ocr_results/: __init__.py  models.py  parsing.py  payload_warnings.py  player_aliases.py  ranked_amount_screen.py  ranked_row_debug.py  ranked_row_ocr.py  ranked_rows.py  registry.py
apps/ocr-worker/src/momo_ocr/features/player_order/: __init__.py  detector.py  models.py  profile.py
apps/ocr-worker/src/momo_ocr/features/revenue/: __init__.py  (+4 more)
apps/ocr-worker/src/momo_ocr/shared/: __init__.py  errors.py  json.py  time.py
apps/ocr-worker/tests/: __init__.py
apps/ocr-worker/tests/integration/: conftest.py  momo_db.py  resources.py  test_end_to_end_smoke.py  test_postgres_adapters.py  test_redis_stream_consumer.py  test_tesserocr_smoke.py
apps/ocr-worker/tests/support/: images.py  ocr_jobs.py  text_recognition.py
apps/ocr-worker/tests/unit/: test_cli.py  test_composition.py  test_config.py  test_errors.py  test_eval_cli.py  test_ids.py  test_logging.py  test_test_architecture.py  test_worker_process.py
apps/ocr-worker/tests/unit/features/: __init__.py  test_batch_calibration_holdout.py  test_fast_path.py  test_image_processing.py  test_incident_log_parser.py  test_incident_log_voting.py  test_money_normalization.py  test_ocr_analysis.py  test_ocr_job_lifecycle.py  test_ocr_job_repository.py  test_ocr_job_runner.py  test_ocr_results.py  test_parser_interfaces.py  test_player_alias_resolver.py  test_player_order.py  test_queue_contract.py  test_redis_consumer.py  test_revenue_parser.py  test_screen_detection.py  test_standalone_analysis.py  test_temp_images.py  test_tesseract_engine_cache.py  test_tesserocr_engine.py  test_text_recognition.py  test_total_assets_parser.py
(+799 files in other folders)
